# jfrog-poc

.github/workflows/: jfrog-cpp.yml  jfrog-npm.yml  jfrog-poc.yml  jfrog-python.yml
simple-cpp-conan-app/: CMakeLists.txt  conanfile.py  conanfile.txt
simple-cpp-conan-app/src/: main.cpp
simple-node-js-react-npm-app-master/: .npmrc  package.json
simple-python-pyinstaller-app-master/: pyproject.toml
